# voice_commands

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  setup.cfg  setup.py  todo.txt
src/: __init__.py  main.py  requirements.txt
src/config/: config.json
src/core/: audio_device.py  detection.py
src/voice_automatisation/: __init__.py  assistant.py  command.py  dataclasses.py  interaction.py  types.py
src/voice_automatisation/config/: __init__.py  calibration.py  config.json
src/voice_automatisation/core/: audio_api.py  audio_device.py  detection.py  executor.py  interpretation.py  recognition.py  voice_activity_detection.py
src/voice_automatisation/dataclasses/: __init__.py  command.py
src/voice_commands/: assistant.py  config.py  model_manager.py
src/voice_commands/core/: audio_api.py  recognition.py  voice_activity_detection.py
voice_automatisation/: README.md  __init__.py  command.py  detection.py  device_selection.py  interpretation.py  recognition.py
voice_automatisation/config/: __init__.py  calibration.py  config.json
voice_automatisation/core/: audio_processing_utils.py  detection.py  device_selection.py  recognition.py
