[metadata]
name = voice_commands
description = Allows mapping commands to your voice
author = Noah Simai
license = Apache 2.0
license_file = LICENSE
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3.11

[options]
packages =
    voice_commands
install_requries =
    numpy>=1.26.1
    pyaudio>=0.2.11
    vosk>=0.3.45
    tqdm>=4.66.1
python_requires = >=3.11
package_dir =
    =src

zip_safe = no