[metadata]
name = voice_commands
version = 0.0.1
url = https://github.com/Pizza989/voice_commands
description = Allows mapping commands to your voice
author = Noah Simai
license = Apache 2.0
license_files = LICENSE
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
package_dir =
    =src
packages = find:
python_requires = >=3.11
install_requires = 
    numpy>=1.26.1
    pyaudio>=0.2.11
    tqdm>=4.66.1
    vosk>=0.3.45
